--- a/app/src/main/res/layout/fragment_graj.xml
+++ b/app/src/main/res/layout/fragment_graj.xml
@@ -4,10 +4,19 @@
     android:layout_height="match_parent"
     tools:context="com.example.toomy.gryterenowe.Graj">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
+        android:id="@+id/GrajLy"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Graj" />
+        android:orientation="vertical">
 
+        <Button
+            android:id="@+id/QuestForUeBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="QuestForUe" />
+
+
+    </LinearLayout>
 </FrameLayout>
