--- a/app/src/main/res/layout/fragment_graj.xml
+++ b/app/src/main/res/layout/fragment_graj.xml
@@ -15,7 +15,7 @@
             android:id="@+id/QuestForUeBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="QuestForUe" />
+            android:text="UE Katowice" />
 
 
     </LinearLayout>
