--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti3.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti3.xml
@@ -9,7 +9,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
-        android:text="@string/wprowad_skr_t_budynku_w_kt_rym_jeste_mo_esz_zapyta_na_portierni" />
+        android:text="@string/wprowad_skr_t_budynku_w_kt_rym_jeste_mo_esz_zapyta_na_portierni"
+        android:id="@+id/textView6" />
 
 
     <Button
@@ -23,6 +24,17 @@
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
         android:text="@string/Dalej" />
+
+    <EditText
+        android:id="@+id/answer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView6"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="77dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="wprowadź skrót" />
 
 </RelativeLayout>
 
