--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#795548</color>
-    <color name="colorPrimaryDark">#5d4037</color>
-    <color name="white">#ffffff</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#c69c8d</color>
+    <color name="colorPrimaryDark">#f9f6f4</color>
+    <color name="white">#0f0f0f</color>
+    <color name="colorAccent">#783d30</color>
     <color name="darkgray">#6c6c6c</color>
 </resources>
