--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti2.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti2.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
         android:text="@string/w_planie_jest_to_budynek"
-        android:id="@+id/textView3"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white" />
 
 
     <Button
@@ -33,16 +33,19 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="78dp"
         android:src="@drawable/hol" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/dalejcnti3"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_marginBottom="11dp"
+        android:layout_alignBaseline="@+id/dalejcnti3"
+        android:layout_alignBottom="@+id/dalejcnti3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
         android:ems="5"
         android:inputType="textPersonName"
         android:text="Wpisz" />
