--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti4.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti4.xml
@@ -11,7 +11,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
         android:text="@string/w_budynku_jest_biblioteka_odnajd_j_teraz_przyda_ci_si_jak_nie_bedziesz_czego"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:gravity="center"/>
 
 
     <Button
