--- a/app/src/main/res/layout/fragment_quest_for_ue_a1.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a1.xml
@@ -18,13 +18,23 @@
     <Button
         android:id="@+id/daleja2"
         android:layout_width="@android:dimen/thumbnail_width"
-        android:layout_height="@android:dimen/thumbnail_width"
+        android:layout_height="50dp"
         android:layout_alignEnd="@+id/textView4"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/textView4"
-        android:layout_marginEnd="17dp"
-        android:layout_marginRight="17dp"
+        android:layout_marginBottom="13dp"
         android:text="@string/Dalej" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_centerVertical="true"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="numer sali" />
 
 </RelativeLayout>
 
