--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti2.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti2.xml
@@ -11,11 +11,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="@string/w_planie_jest_to_budynek"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:gravity="center"/>
 
 
     <Button
         android:id="@+id/dalejcnti3"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:layout_alignParentBottom="true"
