--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti5.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti5.xml
@@ -11,7 +11,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
         android:text="@string/Na_ktorym_pietrze"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:id="@+id/textView5"
+        android:gravity="center"/>
 
 
     <Button
@@ -25,6 +27,19 @@
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
         android:text="@string/Dalej" />
+
+    <EditText
+        android:id="@+id/answer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_alignStart="@+id/textView5"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="14dp"
+        android:layout_marginStart="14dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="podaj piętro" />
 
 </RelativeLayout>
 
