--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti7.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti7.xml
@@ -11,7 +11,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
         android:text="@string/CNTI7"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:gravity="center"/>
 
 
     <Button
