fix not appeared button

--- a/app/src/main/res/layout/fragment_quest_for_ue_a1.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a1.xml
@@ -15,16 +15,6 @@
         android:id="@+id/textView4" />
 
 
-    <Button
-        android:id="@+id/daleja2"
-        android:layout_width="@android:dimen/thumbnail_width"
-        android:layout_height="50dp"
-        android:layout_alignEnd="@+id/textView4"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/textView4"
-        android:layout_marginBottom="13dp"
-        android:text="@string/Dalej" />
-
     <EditText
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
@@ -35,6 +25,18 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="numer sali" />
+
+    <Button
+        android:id="@+id/daleja2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginRight="14dp"
+        android:text="@string/Dalej" />
 
 </RelativeLayout>
 
