--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti4.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti4.xml
@@ -12,8 +12,18 @@
         android:layout_marginTop="46dp"
         android:text="@string/w_budynku_jest_biblioteka_odnajd_j_teraz_przyda_ci_si_jak_nie_bedziesz_czego"
         tools:ignore="HardcodedText"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:id="@+id/textView7" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="11dp"
+        android:src="@drawable/bibloteka" />
 
     <Button
         android:id="@+id/dalejcnti5"
