--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti5.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti5.xml
@@ -5,16 +5,24 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
         android:text="@string/Na_ktorym_pietrze"
-        tools:ignore="HardcodedText"
-        android:id="@+id/textView5"
-        android:gravity="center"/>
+        tools:ignore="HardcodedText" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/gdzie" />
 
     <Button
         android:id="@+id/dalejcnti6"
@@ -32,11 +40,11 @@
         android:id="@+id/answer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="14dp"
-        android:layout_marginStart="14dp"
+        android:layout_alignBottom="@+id/dalejcnti6"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="13dp"
+        android:layout_marginStart="13dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="podaj piętro" />
