--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti6.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti6.xml
@@ -20,22 +20,32 @@
         android:id="@+id/wrong_answer"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/textView"
-        android:layout_marginBottom="36dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginRight="14dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/dalejcnti6"
+        android:layout_marginEnd="33dp"
+        android:layout_marginRight="33dp"
         android:text="@string/nie" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="41dp"
+        android:src="@drawable/szuka" />
 
     <Button
         android:id="@+id/dalejcnti6"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
-        android:layout_alignBaseline="@+id/wrong_answer"
-        android:layout_alignBottom="@+id/wrong_answer"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="35dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginStart="36dp"
         android:text="@string/tak" />
 
     <TextView
