--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti7.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti7.xml
@@ -5,14 +5,26 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="@string/CNTI7"
-        tools:ignore="HardcodedText"
-        android:gravity="center"/>
+        tools:ignore="HardcodedText" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/daleja1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="28dp"
+        android:src="@drawable/balkon" />
 
 
     <Button
