--- a/app/src/main/res/layout/fragment_quest_for_ue_a4.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a4.xml
@@ -9,10 +9,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="16dp"
         android:text="@string/winda"
         tools:ignore="HardcodedText" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/schody" />
 
     <Button
         android:id="@+id/daleja5"
