--- a/app/src/main/res/layout/fragment_quest_for_ue_a2.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a2.xml
@@ -13,6 +13,14 @@
         android:text="@string/ksero"
         tools:ignore="HardcodedText"
         android:gravity="center"/>
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/cnti" />
 
 
     <Button
