add class to generate timer, implenent in two quests view

--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti2.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti2.xml
@@ -7,12 +7,13 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
         android:text="@string/w_planie_jest_to_budynek"
-        android:textColor="@color/white"
-        android:gravity="center"/>
+        android:textColor="@color/white" />
 
 
     <Button
@@ -23,9 +24,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
         android:text="@string/Dalej" />
 
     <ImageView
@@ -35,21 +33,27 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="128dp"
         android:src="@drawable/hol" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/dalejcnti3"
-        android:layout_alignBottom="@+id/dalejcnti3"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:ems="5"
         android:inputType="textPersonName"
         android:text="Wpisz" />
+
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
 </RelativeLayout>
 
