--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti3.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti3.xml
@@ -38,5 +38,14 @@
         android:inputType="textPersonName"
         android:text="wprowadź rok" />
 
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="TextView" />
+
 </RelativeLayout>
 
