--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti6.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti6.xml
@@ -57,5 +57,14 @@
         android:layout_marginBottom="20dp"
         android:textColor="@color/tomato" />
 
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="TextView" />
+
 </RelativeLayout>
 
