--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti7.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti7.xml
@@ -39,5 +39,14 @@
         android:layout_marginRight="12dp"
         android:text="@string/Dalej" />
 
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="TextView" />
+
 </RelativeLayout>
 
