--- a/app/src/main/res/layout/fragment_quest_for_ue_e1.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_e1.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,7 +13,6 @@
         android:layout_marginTop="46dp"
         android:text="@string/budynekl"
         tools:ignore="HardcodedText" />
-
 
     <Button
         android:id="@+id/daleje2"
@@ -26,7 +26,14 @@
         android:layout_marginRight="12dp"
         android:text="@string/Dalej" />
 
-
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="TextView" />
 
 
 </RelativeLayout>
