Parametr ostatni czas jest przechowywany w Shared preferences

--- a/app/src/main/res/layout/fragment_graj.xml
+++ b/app/src/main/res/layout/fragment_graj.xml
@@ -17,6 +17,11 @@
             android:layout_height="wrap_content"
             android:text="UE Katowice" />
 
+        <TextView
+            android:id="@+id/twoj_czas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
 
     </LinearLayout>
 </FrameLayout>
