--- a/app/src/main/res/layout/fragment_quest_for_ue_koniec.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_koniec.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,6 +13,25 @@
         android:text="@string/dziekuje"
         tools:ignore="HardcodedText" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="46dp"
+        android:text="Twój czas to:"
+        tools:ignore="HardcodedText" />
 
-</RelativeLayout>
+
+    <TextView
+        android:id="@+id/czas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="TextView"
+        />
+
+</TableLayout>
 
