--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti5.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti5.xml
@@ -47,7 +47,8 @@
         android:layout_marginStart="13dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="3" />
+        android:hint="Wpisz cyfrę"
+        />
 
     <TextView
         android:id="@+id/timer"
