--- a/app/src/main/res/layout/fragment_quest_for_ue_a2.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a2.xml
@@ -5,22 +5,24 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
-        android:text="@string/ksero"
-        tools:ignore="HardcodedText"
-        android:gravity="center"/>
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/cnti" />
+        android:layout_below="@+id/timer"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:text="@string/ksero"
+        tools:ignore="HardcodedText" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/daleja3"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/student" />
 
 
     <Button
@@ -33,7 +35,16 @@
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
-        android:text="@string/Dalej" />
+        android:text="@string/google" />
+
+    <Button
+        android:id="@+id/nic"
+        android:layout_width="wrap_content"
+        android:layout_height="42dp"
+        android:layout_alignLeft="@+id/imageView1"
+        android:layout_alignStart="@+id/imageView1"
+        android:layout_below="@+id/imageView1"
+        android:text="@string/ey" />
 
     <TextView
         android:id="@+id/timer"
