--- a/app/src/main/res/layout/fragment_quest_for_ue_a8.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a8.xml
@@ -11,7 +11,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
         android:text="@string/wf"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:id="@+id/textView13" />
 
 
     <Button
@@ -34,6 +35,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="TextView" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView13"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/cwiczenia" />
 
 
 </RelativeLayout>
