--- a/app/src/main/res/layout/fragment_quest_for_ue_c1.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_c1.xml
@@ -5,11 +5,12 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView14"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="46dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
         android:text="@string/sciany"
         tools:ignore="HardcodedText" />
 
@@ -34,6 +35,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="TextView" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="700px"
+        android:layout_height="500px"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
+        android:src="@drawable/ps" />
 
 
 </RelativeLayout>
