--- a/app/src/main/res/layout/fragment_quest_for_ue_c2.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_c2.xml
@@ -26,6 +26,14 @@
         android:layout_marginRight="12dp"
         android:text="@string/Dalej" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="700px"
+        android:layout_height="500px"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
+        android:src="@drawable/brama" />
+
     <TextView
         android:id="@+id/timer"
         android:layout_width="wrap_content"
