--- a/app/src/main/res/layout/fragment_quest_for_ue_e2.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_e2.xml
@@ -26,6 +26,24 @@
         android:layout_marginRight="12dp"
         android:text="@string/Dalej" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="700dp"
+        android:layout_height="250dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
+        android:src="@drawable/rektorat" />
+
+    <EditText
+        android:id="@+id/answer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="15"
+        android:inputType="textPersonName"
+        android:layout_marginTop="430dp"
+        android:hint="Imie Nazwisko"
+        />
+
     <TextView
         android:id="@+id/timer"
         android:layout_width="wrap_content"
