--- a/app/src/main/res/layout/fragment_quest_for_ue_a3.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a3.xml
@@ -45,7 +45,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Imię Nazwisko"
-        android:text="Józef Lisak" />
+        android:text="" />
 
     <TextView
         android:id="@+id/timer"
