--- a/app/src/main/res/layout/fragment_quest_for_ue_a1.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a1.xml
@@ -37,6 +37,7 @@
         android:gravity="center"
         android:inputType="textPersonName"
         android:hint="Wpisz numer"
+        android:text="116"
          />
 
     <Button
