--- a/app/src/main/res/layout/fragment_quest_for_ue_a3.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a3.xml
@@ -13,7 +13,8 @@
         android:text="@string/popiersie"
         tools:ignore="HardcodedText"
         android:gravity="center"
-        android:id="@+id/textView9" />
+        android:id="@+id/textView9"
+        android:textColor="@color/BGwhite"/>
 
     <ImageView
         android:id="@+id/imageView1"
