--- a/app/src/main/res/layout/fragment_quest_for_ue_a6.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a6.xml
@@ -12,7 +12,8 @@
         android:layout_marginTop="46dp"
         android:text="@string/pozwiedzaj_budynek_i_wpisz_ile_ma_auli"
         tools:ignore="HardcodedText"
-        android:id="@+id/textView12" />
+        android:id="@+id/textView12"
+        android:textColor="@color/BGwhite"/>
 
 
     <Button
