--- a/app/src/main/res/layout/fragment_quest_for_ue_e2.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_e2.xml
@@ -11,7 +11,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
         android:text="@string/rektor"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:textColor="@color/BGwhite"/>
 
 
     <Button
