--- a/app/src/main/res/layout/fragment_quest_for_ue_a1.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a1.xml
@@ -12,7 +12,8 @@
         android:layout_marginTop="53dp"
         android:text="Na parterze jest bufet. Przyda się na głód. \n W której jest sali?"
         tools:ignore="HardcodedText"
-        android:id="@+id/textView4" />
+        android:id="@+id/textView4"
+        android:textColor="@color/BGwhite"/>
 
     <ImageView
         android:id="@+id/imageView1"
