--- a/app/src/main/res/layout/fragment_quest_for_ue_a2.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a2.xml
@@ -14,7 +14,8 @@
         android:layout_marginTop="15dp"
         android:gravity="center"
         android:text="@string/ksero"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:textColor="@color/BGwhite"/>
 
     <ImageView
         android:id="@+id/imageView1"
