--- a/app/src/main/res/layout/fragment_quest_for_ue_a5.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a5.xml
@@ -13,7 +13,8 @@
         android:text="@string/skrot"
         tools:ignore="HardcodedText"
         android:gravity="center"
-        android:id="@+id/textView11" />
+        android:id="@+id/textView11"
+        android:textColor="@color/BGwhite"/>
 
     <ImageView
         android:id="@+id/imageView1"
