--- a/app/src/main/res/layout/fragment_quest_for_ue_a8.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_a8.xml
@@ -12,7 +12,8 @@
         android:layout_marginTop="46dp"
         android:text="@string/wf"
         tools:ignore="HardcodedText"
-        android:id="@+id/textView13" />
+        android:id="@+id/textView13"
+        android:textColor="@color/BGwhite"/>
 
 
     <Button
