--- a/app/src/main/res/layout/fragment_quest_for_ue_c1.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_c1.xml
@@ -12,7 +12,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="@string/sciany"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:textColor="@color/BGwhite"/>
 
 
     <Button
