--- a/app/src/main/res/layout/fragment_quest_for_ue_cnti2.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_cnti2.xml
@@ -13,7 +13,8 @@
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:text="@string/w_planie_jest_to_budynek"
-        android:textColor="@color/white" />
+
+        android:textColor="@color/BGwhite" />
 
 
     <Button
@@ -34,6 +35,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="128dp"
+
         android:src="@drawable/hol" />
 
     <EditText
