--- a/app/src/main/res/layout/fragment_quest_for_ue_e1.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_e1.xml
@@ -12,7 +12,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
         android:text="@string/budynekl"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:textColor="@color/BGwhite"/>
 
     <Button
         android:id="@+id/daleje2"
