--- a/app/src/main/res/layout/fragment_quest_for_ue_koniec.xml
+++ b/app/src/main/res/layout/fragment_quest_for_ue_koniec.xml
@@ -12,7 +12,8 @@
         android:layout_marginTop="46dp"
         android:text="@string/dziekuje"
         tools:ignore="HardcodedText"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textColor="@color/BGwhite"/>
 
     <TextView
         android:layout_width="wrap_content"
