--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="blue">#0066cc</color>
     <color name="sandybrown">#F4A460</color>
     <color name="tomato">#FF6347</color>
+    <color name="darkBlue">#151a46</color>
 </resources>
